--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Online Magazine - Home</title>
+    <title>Prism Magazine - Home</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
